implemented matchOverState constructor